# template

./: .gitignore  README.md
cargo/: build.rs
cargo/cxx/include/: blobstore.hpp
cargo/cxx/src/: blobstore.cpp
cmake_vcpkg/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  cargo-generate.toml  init-script.rhai  post-script.rhai  pre-script.rhai
cmake_vcpkg/.devcontainer/: Dockerfile  devcontainer.json
cmake_vcpkg/.github/workflows/: RunTest.yml
cmake_vcpkg/include/: add.hpp
cmake_vcpkg/presets/: cross_mingw_presets.json  linux_gcc_presets.json  mingw_presets.json  msvc_presets.json
cmake_vcpkg/rust-src/: Cargo.toml
cmake_vcpkg/src/: add.cpp  main.cpp  main.hpp
cmake_vcpkg/test/: CMakeLists.txt  test_add.cpp  test_main.cpp
cpp/cmake/vcpkg-rust-ffi/cmake/: Utils.cmake
cpp/cmake/vcpkg-rust-ffi/include/: add.hpp
cpp/cmake/vcpkg-rust-ffi/test/: CMakeLists.txt
github-action/docker/rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  action.yml  cargo-generate.toml
github-action/docker/rust/.github/workflows/: test.yml
github-action/docker/rust/src/: main.rs
rust/basic/: Dockerfile
rust/basic/.devcontainer/: devcontainer.json
rust/basic/src/: main.rs
rust/ffi/cargo-cxx/: cargo-generate.toml
templates/cpp/cmake/vcpkg-rust-ffi/: .gitignore  CMakeLists.txt  CMakePresets.json  pre-script.rhai
templates/cpp/cmake/vcpkg-rust-ffi/presets/: cross_mingw_presets.json
templates/cpp/cmake/vcpkg-rust-ffi/rust-src/src/: lib.rs
templates/rust/docker/basic/: Dockerfile  README.md
templates/rust/ffi/cargo-cxx/: Cargo.toml
templates/rust/ffi/cargo-cxx/src/: main.rs
